include(gps_transformerTaskLib)

ADD_LIBRARY(${GPS_TRANSFORMER_TASKLIB_NAME} SHARED 
    ${GPS_TRANSFORMER_TASKLIB_SOURCES})
add_dependencies(${GPS_TRANSFORMER_TASKLIB_NAME}
    regen-typekit)

TARGET_LINK_LIBRARIES(${GPS_TRANSFORMER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${QT_LIBRARIES}
    ${GPS_TRANSFORMER_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${GPS_TRANSFORMER_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${GPS_TRANSFORMER_TASKLIB_INTERFACE_LIBRARIES}")
SET_TARGET_PROPERTIES(${GPS_TRANSFORMER_TASKLIB_NAME}
    PROPERTIES INTERFACE_LINK_LIBRARIES "${GPS_TRANSFORMER_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${GPS_TRANSFORMER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${GPS_TRANSFORMER_TASKLIB_HEADERS}
    DESTINATION include/orocos/gps_transformer)

